--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "digital-creative/nova-range-input-filter",
+    "name": "juniora/nova-range-input-filter",
     "description": "A Laravel Nova range input filter.",
     "keywords": [
         "laravel",
@@ -11,12 +11,15 @@
     "authors": [
         {
             "name": "Rafael Milewski"
+        },
+        {
+            "name": "Nima HeydariNasab"
         }
     ],
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "laravel/nova": "^4.0"
+        "laravel/nova": "^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
